[package]
name = "cuda_d3d11_interop_bindings"
version = "0.1.0"
authors = ["James Thomson <james.thomson019@gmail.com>"]
edition = "2021"
description = "Register and map D3D11 buffers with CUDA"
documentation = "https://docs.rs/cuda_d3d11_interop"
readme = "README.md"
homepage = "https://github.com/jathoms/cuda_d3d11_interop_bindings"
repository = "https://github.com/jathoms/cuda_d3d11_interop_bindings"
license = "MIT"
keywords = ["cuda", "direct3d11"]
categories = ["graphics", "api-bindings", "os::windows-apis"]

[dependencies]
anyhow = "1.0.98"
windows = { version = "0.61.1", default-features = false, features = [
  "Win32_Graphics_Direct3D11",
] }

[build-dependencies]
bindgen = "0.71.1"
